--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Wisdom Pet Medicine</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://use.fontawesome.com/e6c333601a.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
                         <span class="sr-only">Toggle navigation</span>
@@ -25,6 +26,7 @@
                         <li class="active"><a href="#featured">Home</a></li>
                         <li><a href="#mission">Mission</a></li>
                         <li><a href="#services">Services</a></li>
+                        <li><a href="#services">Activities</a></li>
                         <li><a href="#staff">About Us</a></li>
                         <li><a href="#testimonials">Sign In</a></li>
                         <li>
@@ -41,8 +43,10 @@
             </div><!-- container -->
         </nav>
     </header>
-    <div class="carousel slide" data-ride="carousel" id="featured">
-        <div class="carousel-inner">
+    <div class="carousel fade" data-ride="carousel" id="featured">
+        <ol class="carousel-indicators"></ol>
+
+        <div class="carousel-inner full-screen">
             <div class="item active"><img src="images/carousel-lifestyle.jpg" alt="Lifestyle Photo"></div>
             <div class="item"><img src="images/carousel-mission.jpg" alt="Mission"></div>
             <div class="item"><img src="images/carousel-lifestyle.jpg" alt="Vaccinations"></div>
@@ -72,33 +76,186 @@
     </section>
     <section class="mission container">
         <h2 class="text-center">Our Mission</h2>
-        <hr/>
-        <div class="row text-center">
-            <div class="col-md-4 col-sm-4"><img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
-              <p>Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.</p>
-            </div>
-            <div class="col-md-4 col-sm-4"><img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
+        <hr />
+        <div class="text-center">
+            <div class="col-md-4 col-sm-4">
+                <img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
                 <p>Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.</p>
             </div>
-            <div class="col-md-4 col-sm-4"><img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
+            <div class="col-md-4 col-sm-4">
+                <img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
+                <p>Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.</p>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
                 <p>Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.</p>
             </div>
         </div>
     </section>
-    <section class="events container">
+    <section class="events container text-center recent-events">
         <h2>Recent Events</h2>
         <hr />
         <div class="row">
-            <div class="col-md-8">
-
+            <div class="col-md-8 table-responsive">
+                <table class="table table-hover">
+                    <tr>
+                        <td><img src="images/testimonial-mcphersons.jpg" style="height:50px;width:50px;  " /></td>
+                        <td><h3><a href="#">Tree Planation</a></h3></td>
+                        <td><i class="fa fa-calendar" aria-hidden="true"></i><h6>12/10/11</h6></td>
+                        <td><button type="button" class="btn btn-info">Join</button></td>
+                    </tr>
+                    <tr>
+                        <td><img src="images/testimonial-mcphersons.jpg" style="height:50px;width:50px;  " /></td>
+                        <td><h3><a href="#">Tree Planation</a></h3></td>
+                        <td><i class="fa fa-calendar" aria-hidden="true"></i><h6>12/10/11</h6></td>
+                        <td><button type="button" class="btn btn-info">Join</button></td>
+                    </tr>
+                    <tr>
+                        <td><img src="images/testimonial-mcphersons.jpg" style="height:50px;width:50px;  " /></td>
+                        <td><h3><a href="#">Tree Planation</a></h3></td>
+                        <td><i class="fa fa-calendar" aria-hidden="true"></i><h6>12/10/11</h6></td>
+                        <td><button type="button" class="btn btn-info">Join</button></td>
+                    </tr>
+                    <tr>
+                        <td><img src="images/testimonial-mcphersons.jpg" style="height:50px;width:50px;  " /></td>
+                        <td><h3><a href="#">Tree Planation</a></h3></td>
+                        <td><i class="fa fa-calendar" aria-hidden="true"></i><h6>12/10/11</h6></td>
+                        <td><button type="button" class="btn btn-info">Join</button></td>
+                    </tr>
+                    <tr>
+                        <td><img src="images/testimonial-mcphersons.jpg" style="height:50px;width:50px;  " /></td>
+                        <td><h3><a href="#">Tree Planation</a></h3></td>
+                        <td><i class="fa fa-calendar" aria-hidden="true"></i><h6>12/10/11</h6></td>
+                        <td><button type="button" class="btn btn-info">Join</button></td>
+                    </tr>
+                </table>
             </div>
             <div class="col-md-4">
 
             </div>
         </div>
+        <div class="view-more-events container">
+            <h5><i class="fa fa-refresh"></i><a href="#">View More Jobs  </a></h5>
+        </div>
+        <div class="col-md-6 col-xs-3">
+            <p><h2><b>12001<span></h2> <span>Events</span></p>
+        </div>
+        <div class="col-md-6 col-xs-3">
+            <p>Total Volunteers:<span style="padding-left:5px"><b><h2>160900</h2></b></span></p>
+        </div>
+    </section>
+    <!--<section class="total-event text-center">
+
+        <div class="col-md-6 col-xs-3">
+            <p><h2><b>12001<span></h2> <span>Events</span></p>
+        </div>
+        <div class="col-md-6 col-xs-3">
+            <p>Total Volunteers:<span style="padding-left:5px"><b><h2>160900</h2></b></span></p>
+        </div>
+
+    </section>-->
+
+
+    <section class="our-work container filterable-services">
+        <h2 class="text-center">Our Work</h2>
+        <hr />
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="nav nav-pills work-filter">
+                    <li class="filerby">Filter by:</li>
+                    <li role="presentation" class="active"><a href="#" data-filter="*">All</a></li>
+                    <li role="presentation"><a href="#" data-filter=".treeplantation">Tree Plantation</a></li>
+                    <li role="presentation"><a href="#" data-filter=".blooddonation">Blood Donation</a></li>
+                    <li role="presentation"><a href="#" data-filter=".petcare">Pet Care</a></li>
+                    <li role="presentation"><a href="#" data-filter=".fundraising">Fund Raising</a></li>
+                    <li role="presentation"><a href="#" data-filter=".cleaning">Cleaning</a></li>
+                    <li role="presentation"><a href="#" data-filter=".awarness">Awarness</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row work-items">
+            <figure class="work-item col-sm-3 treeplantation">
+                <a href="#">
+                    <img src="http://placeskull.com/700/400/466417" class="img-responsive">
+                </a>
+            </figure>
+            <figure class="work-item col-sm-3 blooddonation">
+                <a href="#">
+                    <img src="http://placeskull.com/700/400/307d7e" class="img-responsive">
+                </a>
+            </figure>
+            <figure class="work-item col-sm-3">
+                <a href="#">
+                    <img src="http://placeskull.com/700/400/2554c7" class="img-responsive">
+                </a>
+            </figure>
+            <figure class="work-item col-sm-3 petcare">
+                <a href="#">
+                    <img src="http://placeskull.com/700/400/8d36c9" class="img-responsive">
+                </a>
+            </figure>
+            <figure class="work-item col-sm-3 fundraising">
+                <a href="#">
+                    <img src="http://placeskull.com/700/400/e4317f" class="img-responsive">
+                </a>
+            </figure>
+            <figure class="work-item col-sm-3 awarness">
+                <a href="#">
+                    <img src="http://placeskull.com/700/400/ff0000" class="img-responsive">
+                </a>
+            </figure>
+            <figure class="work-item col-sm-3 treeplantation">
+                <a href="#">
+                    <img src="http://placeskull.com/700/400/fdd017" class="img-responsive">
+                </a>
+            </figure>
+            <figure class="work-item col-sm-3 cleaning">
+                <a href="#">
+                    <img src="http://placeskull.com/700/400/" class="img-responsive">
+                </a>
+            </figure>
+        </div>
+    </section>
+
+    <section class="testimonial" id="testimonial">
+        <h2 class="text-center">Testimonial</h2>
+        <hr />
+        <h3 class="text-center">WHAT PEOPLES ARE SAYING</h3>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="..." alt="...">
+                                <div class="carousel-caption">
+                                    ...
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="..." alt="...">
+                                <div class="carousel-caption">
+                                    ...
+                                </div>
+                            </div>
+                            ...
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
     <script src="js/myscript.js"></script>
 </body>
 </html>
