--- a/mission.html
+++ b/mission.html
@@ -1,5 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Wisdom Pet Medicine</title>
@@ -24,9 +23,9 @@
                 <div class="collapse navbar-collapse" id="collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="mission.html">Mission</a></li>
+                        <li class="active"><a href="mission.html">Mission</a></li>
                         <li><a href="service.html">Services</a></li>
-                        <li class="active"><a href="activitydetails.html">Activities</a></li>
+                        <li><a href="allactivity.html">Activities</a></li>
                         <li><a href="#staff">About Us</a></li>
                         <li><a href="signup.html">Join</a></li>
                     </ul>
@@ -34,31 +33,42 @@
             </div><!-- container -->
         </nav>
     </header>
-    
-    <section class="container allactivities">
-        <div class="row">
-            <div class="col-sm-3 col-sm-offset-2">
-                <div class="searchbox">
-                    <h3>NARROW YOUR SEARCH</h3>
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
-                        </span>
-                    </div><!-- /input-group -->
-                </div>
-                <div class="category">
-                    <ul class="nav">
-                        <li><a href="#"><i class="fa fa-envira" aria-hidden="true"></i><b>Category#1</b></a></li>
-                        <li><a href="#"><i class="fa fa-envira" aria-hidden="true"></i> Category#1</a></li>
-                        <li><a href="#"><i class="fa fa-envira" aria-hidden="true"></i> Category#1</a></li>
-                        <li><a href="#"><i class="fa fa-envira" aria-hidden="true"></i> Category#1</a></li>
-                        <li><a href="#"><i class="fa fa-envira" aria-hidden="true"></i> Category#1</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-6">
 
+    <section class="mission text-center" id="mission">
+        <div class="container">
+            <h2 class="text-center">Our Mission</h2>
+            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="row text-center">
+                <div class="col-md-4 col-sm-4 col-lg-4" id="missiontarget">
+                    <h3>Mission Title #1</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a href="#">
+                        <div class="missionmoreone">
+                            <h1>LOVE</h1>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-4 col-lg-4" id="missiontarget">
+                    <h3>Mission Title #2</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a href="#">
+                        <div class="missionmoretwo">
+                            <h1>CARE</h1>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-4 col-lg-4" id="missiontarget">
+                    <h3>Mission Title #3</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a href="#">
+                        <div class="missionmorethree">
+                            <h1>HELP</h1>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
