--- a/signup.html
+++ b/signup.html
@@ -1,9 +1,217 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <title>Wisdom Pet Medicine</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://use.fontawesome.com/e6c333601a.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #4c726f" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html"><h1>Volunteer<span class="subhead">Ready to help</span></h1></a>
+                </div><!-- navbar-header -->
+                <div class="collapse navbar-collapse" id="collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="mission.html">Mission</a></li>
+                        <li><a href="service.html">Services</a></li>
+                        <li><a href="allactivity.html">Activities</a></li>
+                        <li><a href="#staff">About Us</a></li>
+                        <li class="active"><a href="signup.html">Join</a></li>
+                    </ul>
+                </div><!-- collapse navbar-collapse -->
+            </div><!-- container -->
+        </nav>
+    </header>
 
+    <div class="container signUp">
+        <div class="row">
+            <div class="col-md-6">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label for="firstname" class="col-sm-4 control-label">First Name</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="firstname" placeholder="First Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastname" class="col-sm-4 control-label">Last Name</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="username" class="col-sm-4 control-label">Username</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="username" placeholder="Username">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-4 control-label">Email</label>
+                        <div class="col-sm-8">
+                            <input type="email" class="form-control" id="email" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="col-sm-4 control-label">Password</label>
+                        <div class="col-sm-8">
+                            <input type="password" class="form-control" id="password" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmpassword" class="col-sm-4 control-label">Confirm Password</label>
+                        <div class="col-sm-8">
+                            <input type="password" class="form-control" id="confirmpassword" placeholder="Confirm Password">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="mobilenumber" class="col-sm-4 control-label">Mobile Number</label>
+                        <div class="col-sm-8">
+                            <input type="number" class="form-control" id="number" placeholder="Mobile Number">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="country" class="col-sm-4 control-label">Country</label>
+                        <div class="col-sm-8">
+                            <select class="form-control">
+                                <option>India</option>
+                                <option>Australia</option>
+                                <option>Newzeland</option>
+                                <option>USA</option>
+                                <option>China</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="state" class="col-sm-4 control-label">State</label>
+                        <div class="col-sm-8">
+                            <select class="form-control">
+                                <option>State#1</option>
+                                <option>State#2</option>
+                                <option>State#3</option>
+                                <option>State#4</option>
+                                <option>State#5</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="userimage" class="col-sm-4 control-label">User Image</label>
+                        <div class="col-sm-8">
+                            <input type="file" id="#">
+                            <p class="help-block">chooser user avater</p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-default">Sign up</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-6 login">
+                <h4 class="text-center">Have an account ?</h4>
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        </div>
+                    </div>
+
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Remember Me
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-default">Log In</button>
+                </form>
+                <h3 class="text-center">Sign Up with </h3>
+                <p class="text-center">
+                    <button style="background-color: #405d9b;color:#ffffff" type="button" class="btn btn-default btn-lg">
+                        <i class="fa fa-facebook" aria-hidden="true"></i> facebook
+                    </button>
+                </p>
+                <p class="text-center">
+                    <button style="background-color: #dd4b38;color:#ffffff" type="button" class="btn btn-default btn-lg">
+                        <i class="fa fa-facebook" aria-hidden="true"></i> google-plus
+                    </button>
+                </p>
+                <p class="text-center">
+                    <button style="background-color: #31bbf0;color:#ffffff" type="button" class="btn btn-default btn-lg">
+                        <i class="fa fa-facebook" aria-hidden="true"></i> twitter
+                    </button>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer Section -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <p>
+                        <i class="fa fa-map-marker fa-3x" aria-hidden="true"></i>
+                        <span>
+                            4749 Armbrester Drive
+
+                            <b>NEOPIT,Wisconsin</b>
+                        </span>
+                    </p>
+                    <p>
+                        <i class="fa fa-phone-square fa-3x" aria-hidden="true"></i>
+                        <span>
+                            <b>+0767565-98</b>
+                        </span>
+
+                    </p>
+                    <p>
+                        <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+                        <span>
+                            <a href="mailto:rsen253@gmail.com"><b>Mail Us!!</b></a>
+
+                        </span>
+
+                    </p>
+                </div>
+                <div class="col-sm-6 text-center">
+                    <h3>About Us</h3>
+                    <p>Rump ham meatloaf, tenderloin meatball capicola tri-tip bresaola hamburger turkey short loin pig pork loin drumstick tongue. Short loin fatback filet mignon, kielbasa pork chop chuck cow capicola.Rump ham meatloaf, tenderloin meatball capicola tri-tip bresaola hamburger turkey short loin pig pork loin drumstick tongue. Short loin fatback filet mignon, kielbasa pork chop chuck cow capicola.</p>
+                    <p>
+                        <a href="#"><img src="images/company1.png" alt="Alternate Text" /></a>
+                        <a href="#"><img src="images/company2.png" alt="Alternate Text" /></a>
+                        <a href="#"><img src="images/company3.png" alt="Alternate Text" /></a>
+                        <a href="#"><img src="images/company4.png" alt="Alternate Text" /></a>
+                        <a href="#"><img src="images/company2.png" alt="Alternate Text" /></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid copyright text-center">
+            <h6>All rights reserved &copy;<b>Rahul</b> 2016</h6>
+        </div>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+    <script src="js/myscript.js"></script>
 </body>
 </html>
