--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
         </div>
         <div class="view-more-events container">
-            <h5><i class="fa fa-refresh"></i><a href="#">View More Jobs  </a></h5>
+            <h5><i class="fa fa-refresh"></i><a href="activitydetails.html">View More Jobs  </a></h5>
         </div>
         <div class="col-md-6 col-xs-3">
             <p><h2><b>12001<span></h2> <span>Events</span></p>
