Add other pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="mission.html">Mission</a></li>
                         <li><a href="service.html">Services</a></li>
                         <li><a href="allactivity.html">Activities</a></li>
-                        <li><a href="#staff">About Us</a></li>
+                        <!--<li><a href="#staff">About Us</a></li>-->
                         <li><a href="signup.html">Join</a></li>
                             <!--<li><a id="dLabel" data-target="#" href="http://example.com" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 <img class="img-circle" src="images/testimonial-johnb.jpg" style="height:50px;width
@@ -133,13 +133,13 @@
             </div>
         </div>
         <div class="view-more-events container">
-            <h5><i class="fa fa-refresh"></i><a href="activitydetails.html">View More Jobs  </a></h5>
+            <h5><i class="fa fa-refresh"></i><a href="allactivity.html">View More Jobs  </a></h5>
         </div>
         <div class="col-md-6 col-xs-3">
-            <p><h2><b>12001<span></h2> <span>Events</span></p>
+            <p><h2><b>12001</b></h2> <span>Events</span></p>
         </div>
         <div class="col-md-6 col-xs-3">
-            <p>Total Volunteers:<span style="padding-left:5px"><b><h2>160900</h2></b></span></p>
+            <p>Total Volunteers:<span style="padding-left:5px"><h2><b>160900</b></h2></span></p>
         </div>
     </section>
     <!--<section class="total-event text-center">
