--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
                         <li><a href="mission.html">Mission</a></li>
                         <li class="active"><a href="service.html">Services</a></li>
                         <li><a href="allactivity.html">Activities</a></li>
-                        <li><a href="#staff">About Us</a></li>
+                        <!--<li><a href="#staff">About Us</a></li>-->
                         <li><a href="signup.html">Join</a></li>
                         <!--<li><a id="dLabel" data-target="#" href="http://example.com" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img class="img-circle" src="images/testimonial-johnb.jpg" style="height:50px;width
