--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
                         <li><a href="mission.html">Mission</a></li>
                         <li><a href="service.html">Services</a></li>
                         <li><a href="allactivity.html">Activities</a></li>
-                        <li><a href="#staff">About Us</a></li>
+                        <!--<li><a href="#staff">About Us</a></li>-->
                         <li class="active"><a href="signup.html">Join</a></li>
                     </ul>
                 </div><!-- collapse navbar-collapse -->
@@ -158,12 +158,12 @@
                 </p>
                 <p class="text-center">
                     <button style="background-color: #dd4b38;color:#ffffff" type="button" class="btn btn-default btn-lg">
-                        <i class="fa fa-facebook" aria-hidden="true"></i> google-plus
+                        <i class="fa fa-google-plus" aria-hidden="true"></i> google-plus
                     </button>
                 </p>
                 <p class="text-center">
                     <button style="background-color: #31bbf0;color:#ffffff" type="button" class="btn btn-default btn-lg">
-                        <i class="fa fa-facebook" aria-hidden="true"></i> twitter
+                        <i class="fa fa-twitter" aria-hidden="true"></i> twitter
                     </button>
                 </p>
             </div>
