--- a/allactivity.html
+++ b/allactivity.html
@@ -27,7 +27,7 @@
                         <li><a href="mission.html">Mission</a></li>
                         <li><a href="service.html">Services</a></li>
                         <li class="active"><a href="activitydetails.html">Activities</a></li>
-                        <li><a href="#staff">About Us</a></li>
+                        <!--<li><a href="#staff">About Us</a></li>-->
                         <li><a href="signup.html">Join</a></li>
                     </ul>
                 </div><!-- collapse navbar-collapse -->
