--- a/mission.html
+++ b/mission.html
@@ -26,7 +26,7 @@
                         <li class="active"><a href="mission.html">Mission</a></li>
                         <li><a href="service.html">Services</a></li>
                         <li><a href="allactivity.html">Activities</a></li>
-                        <li><a href="#staff">About Us</a></li>
+                        <!--<li><a href="#staff">About Us</a></li>-->
                         <li><a href="signup.html">Join</a></li>
                     </ul>
                 </div><!-- collapse navbar-collapse -->
