--- a/newevent.html
+++ b/newevent.html
@@ -28,7 +28,7 @@
                         <li><a href="mission.html">Mission</a></li>
                         <li><a href="service.html">Services</a></li>
                         <li class="active"><a href="activitydetails.html">Activities</a></li>
-                        <li><a href="#staff">About Us</a></li>
+                        <!--<li><a href="#staff">About Us</a></li>-->
                         <li><a href="signup.html">Join</a></li>
                     </ul>
                 </div><!-- collapse navbar-collapse -->
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-default">Send invitation</button>
+                <button style="margin-bottom:10px" type="submit" class="btn btn-default">ADD Event</button>
             </form>
         </div>
 
