--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,7 @@
                         <li><a href="mission.html">Mission</a></li>
                         <li><a href="service.html">Services</a></li>
                         <li><a href="allactivity.html">Activities</a></li>
-                        <li><a href="#staff">About Us</a></li>
+                        <!--<li><a href="#staff">About Us</a></li>-->
                         <li class="active"><a href="signup.html">Join</a></li>
                     </ul>
                 </div><!-- collapse navbar-collapse -->
