Modified text size and activity page

--- a/activitydetails.html
+++ b/activitydetails.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Wisdom Pet Medicine</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://s.mlcdn.co/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/e6c333601a.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -38,47 +39,39 @@
     </header>
 
     <section class="activity-details">
+        
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-8">
-                        <h2>Help kids with special needs learn horsemanship</h2>
-                        <h3 class="total-feedback text-center"><b>13 </b>feedbacks</h3>
-                        <div class="col-sm-6">
-                            <h3 class="text-info">Volunteers need : 10</h3>
-                        </div>
-                        <div class="col-sm-6">
-                            <h3 class="text-right text-success"><i class="fa fa-users" aria-hidden="true"></i>Volunteers joined : 28</h3>
-                        </div>
-
-
+            <div class="row activite-img-featured">
+                <div class="col-md-12 title-image">
+                    <h1 class="text-center event-title">Help kids with special needs learn horsemanship</h1>
+                    <h3 class="text-center total-feedback">Feedback<span class="badge">40</span></h3>
+                    <div class="col-sm-6">
+                        <h3 class="text-center">Volunteers need : 10</h3>
                     </div>
-                    <div class="col-md-4">
-                        <img src="http://pipsum.com/300x300.jpg" alt="featured image" />
+                    <div class="col-sm-6">
+                        <h3 class="text-center"><i class="fa fa-users" aria-hidden="true"></i>Volunteers joined : 28</h3>
+                    </div>
+                    <div class="col-sm-6 text-center">
+
+                        <h3>Where <i class="fa fa-map-marker" style="padding-left: 15px;" aria-hidden="true"></i></h3>
+                        <h3>3786 Heavner Avenue , Georgia</h3>
+                    </div>
+                    <div class="col-sm-6 text-center">
+                        <h3>When<i class="fa fa-calendar" style="padding-left: 15px;" aria-hidden="true"></i></h3>
+                        <h3>10/12/2016</h3>                        
+                    </div>
+                    <div class="col-sm-12 text-center">
+                        <button type="button" class="btn btn-primary btn-lg btn-help">I want to help</button>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <button type="button" class="btn btn-primary btn-lg btn-block btn-help">I want to help</button>
-                </div>
+                
             </div>
-            <div class="row text-center">
-                <div class="col-sm-6 event-additional-information">
-
-                    <h4>Where <i class="fa fa-map-marker" style="padding-left: 15px;" aria-hidden="true"></i></h4>
-                    <h5>3786 Heavner Avenue , Georgia</h5>
-                </div>
-                <div class="col-sm-6 event-additional-information">
-                    <h4>When<i class="fa fa-calendar" style="padding-left: 15px;" aria-hidden="true"></i></h4>
-                    <h5>10/12/2016</h5>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-sm-8 text-justify event-description">
+            <div class="row event-description">
+                <div class="col-sm-8 text-justify">
                     <p>Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin, filet mignon turducken biltong fatback flank. Alcatra frankfurter shankle short ribs. Salami drumstick beef ribs ham strip steak, andouille frankfurter chicken turkey boudin venison. Pork rump ham hock cow corned beef kielbasa capicola ham, prosciutto tail pastrami pig fatback porchetta. Short loin tail salami, short ribs tenderloin beef ribs biltong ground round.Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin, filet mignon turducken biltong fatback flank. Alcatra frankfurter shankle short ribs. Salami drumstick beef ribs ham strip steak, andouille frankfurter chicken turkey boudin venison. Pork rump ham hock cow corned beef kielbasa capicola ham, prosciutto tail pastrami pig fatback porchetta. Short loin tail salami, short ribs tenderloin beef ribs biltong ground round.</p>
                 </div>
                 <div class="col-sm-4">
-
+                    chart
                 </div>
             </div>
             <form action="/" method="post">
