--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
             <div class="col-sm-6 service-image" id="service1"></div>
             <div class="col-sm-6">
                 <p>
-                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
+                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
                 </p>
             </div>
         </div>
@@ -55,7 +55,7 @@
             
             <div class="col-sm-6">
                 <p>
-                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
+                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
                 </p>
             </div>
             <div class="col-sm-6 service-image" id="service2"></div>
@@ -64,7 +64,7 @@
             <div class="col-sm-6 service-image" id="service3"> </div>
             <div class="col-sm-6">
                 <p>
-                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
+                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
                 </p>
             </div>
         </div>
@@ -72,7 +72,41 @@
             
             <div class="col-sm-6">
                 <p>
-                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
+                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
+                </p>
+            </div>
+            <div class="col-sm-6 service-image" id="service4"></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 service-image" id="service1"></div>
+            <div class="col-sm-6">
+                <p>
+                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
+                </p>
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col-sm-6">
+                <p>
+                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
+                </p>
+            </div>
+            <div class="col-sm-6 service-image" id="service2"></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 service-image" id="service3"> </div>
+            <div class="col-sm-6">
+                <p>
+                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
+                </p>
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col-sm-6">
+                <p>
+                    Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick
                 </p>
             </div>
             <div class="col-sm-6 service-image" id="service4"></div>
@@ -110,7 +144,7 @@
                 </div>
                 <div class="col-sm-6 text-center">
                     <h3>About Us</h3>
-                    <p>Rump ham meatloaf, tenderloin meatball capicola tri-tip bresaola hamburger turkey short loin pig pork loin drumstick tongue. Short loin fatback filet mignon, kielbasa pork chop chuck cow capicola.Rump ham meatloaf, tenderloin meatball capicola tri-tip bresaola hamburger turkey short loin pig pork loin drumstick tongue. Short loin fatback filet mignon, kielbasa pork chop chuck cow capicola.</p>
+                    <p>Rump ham meatloaf, tenderloin meatball capicola tri-tip bresaola hamburger turkey short loin pig pork loin drumstick tongue. Short loin fatback filet mignon, kielbasa pork chop chuck cow capicola.Rump ham meatloaf, tenderloin meatball capicola tri-tip bresaola hamburger turkey short loin pig pork loin drumstick tongue. Short loin fatback filet mignon, kielbasa pork chop chuck cow capicola.Boudin kevin t-bone short ribs biltong sausage pork belly corned beef kielbasa. Hamburger alcatra flank, meatball bresaola beef leberkas t-bone. Boudin turducken jerky andouille flank turkey biltong prosciutto drumstick shoulder rump shankle. Ball tip pork loin pastrami, shankle turducken brisket t-bone pancetta pork chop fatback rump jowl landjaeger filet mignon. Ham hock ribeye sausage drumstick</p>
                     <p>
                         <a href="#"><img src="images/company1.png" alt="Alternate Text" /></a>
                         <a href="#"><img src="images/company2.png" alt="Alternate Text" /></a>
