--- a/allactivity.html
+++ b/allactivity.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Wisdom Pet Medicine</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://s.mlcdn.co/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/e6c333601a.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
