--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Wisdom Pet Medicine</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/e6c333601a.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,14 +14,14 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container">
-                <div class="navbar-header">
+                <div class="navbar-header" id="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><h1>Volunteer<span class="subhead">Ready to help</span></h1></a>
+                    <a class="navbar-brand animated fadeIn" href="index.html"><h1>Volunteer<span class="subhead">Ready to help</span></h1></a>
                 </div><!-- navbar-header -->
                 <div class="collapse navbar-collapse" id="collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -72,21 +74,21 @@
             <button type="submit" class="btn btn-success">Subscribe</button>
         </form>
     </section>
-    <section class="mission container">
+    <section class="container mission">
         <h2 class="text-center">Our Mission</h2>
         <hr />
         <div class="text-center">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-sm-4 circle">
                 <img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
-                <p>Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.</p>
+                <p class="mission-details">Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
             </div>
-            <div class="col-md-4 col-sm-4">
-                <img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
-                <p>Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.</p>
+            <div class="col-md-4 col-sm-4 circle">
+                <img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission circle2" alt="Alternate Text" />
+                <p class="mission-details">Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
             </div>
-            <div class="col-md-4 col-sm-4">
-                <img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission" alt="Alternate Text" />
-                <p>Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.</p>
+            <div class="col-md-4 col-sm-4 circle">
+                <img src="images/testimonial-janeh.jpg" class="img-responsive img-thumbnail img-mission circle3" alt="Alternate Text" />
+                <p class="mission-details">Bacon ipsum dolor amet biltong ham hock meatloaf chuck porchetta t-bone, spare ribs salami capicola bacon meatball pancetta ribeye.Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
             </div>
         </div>
     </section>
@@ -235,19 +237,19 @@
                             <div class="item active">
                                 <img src="http://placeskull.com/200/200" class="img-circle" alt="image">
                                 <div class="carousel-caption">
-                                    <p class="user-testimonial">Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
+                                    <p class="user-testimonial">Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurterTurkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <img src="http://placeskull.com/200/200/307d7e" class="img-circle" alt="image">
                                 <div class="carousel-caption">
-                                    <p class="user-testimonial">Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
+                                    <p class="user-testimonial">Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurterTurkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <img src="http://placeskull.com/200/200/466417" class="img-circle" alt="image">
                                 <div class="carousel-caption">
-                                    <p class="user-testimonial">Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
+                                    <p class="user-testimonial">Turkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurterTurkey salami t-bone boudin shank swine capicola bacon leberkas pork chop. Cupim shank meatball turkey spare ribs strip steak ground round fatback. Fatback tri-tip biltong venison short loin t-bone ball tip prosciutto frankfurter</p>
                                 </div>
                             </div>
                         </div>
@@ -305,6 +307,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
     <script src="js/myscript.js"></script>
